<resources>
    <string name="app_name">Siaga Corona</string>
    <string name="todo">TODO</string>
    <string name="indonesia">Indonesia</string>
    <string name="_86521">86521</string>
    <string name="total_cases">Total Cases</string>
    <string name="textview">TextView</string>
    <string name="get_to_know_more">Get to Know More</string>
    <string name="button">Button</string>
    <string name="positive">Positive</string>
    <string name="_36977">36977</string>
    <string name="_4143">4143</string>
    <string name="death">Death</string>
    <string name="recovered">Recovered</string>
    <string name="_45401">45401</string>
    <string name="look_up">Look Up</string>
    <string name="hotline">Hotline</string>
    <string name="check_emergency_number_to_contact">Check emergency number to contact</string>
    <string name="see_details_by_province_all_over_indonesia">See details by province all over Indonesia</string>
    <string name="type_to_search">Type to Search...</string>
    <string name="version">V1.0.0</string>
    <string name="Hotline_description">Layanan darurat via telepon yang disediakan oleh Kemkes dan juga Pemprov DKI Jakarta</string>
    <string name="Info_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>