<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/info_dialog_rounded">

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="28dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rubik_bold"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/Indigo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgClose" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik"
        android:gravity="center_horizontal"
        android:text="@string/version"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="@string/Info_description"
        android:fontFamily="@font/rubik"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVersion"
        />

</androidx.constraintlayout.widget.ConstraintLayout>