<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/Indigo">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="158dp"
        android:layout_height="147dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:src="@drawable/virus" />

    <LinearLayout
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_86521"
            android:fontFamily="@font/rubik_bold"
            android:textColor="@color/White"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_cases"
            android:fontFamily="@font/karla"
            android:textSize="16sp"
            android:textColor="@color/White"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indonesia"
        android:textColor="@color/White"
        android:fontFamily="@font/rubik_bold"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="47dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102"
        app:srcCompat="@drawable/info_button"
        android:contentDescription="@string/todo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="500sp"
        android:background="@drawable/whitemenu"
        android:foregroundGravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/LinearLayout6"
            android:layout_width="105sp"
            android:layout_height="105sp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_button_teal"
            android:elevation="5sp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/LinearLayout4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_36977"
                android:fontFamily="@font/rubik_bold"
                android:textSize="20sp"
                android:textColor="@color/White"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/positive"
                android:fontFamily="@font/karla"
                android:textSize="14sp"
                android:textColor="@color/White"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout5"
            android:layout_width="105sp"
            android:layout_height="105sp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_button_red"
            android:elevation="5sp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/LinearLayout4"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_4143"
                android:textColor="@color/White"
                android:fontFamily="@font/rubik_bold"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/death"
                android:fontFamily="@font/karla"
                android:textSize="14sp"
                android:textColor="@color/White"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout4"
            android:layout_width="105sp"
            android:layout_height="105sp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_button_green"
            android:elevation="5sp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/LinearLayout5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/LinearLayout6"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_45401"
                android:fontFamily="@font/rubik_bold"
                android:textColor="@color/White"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/recovered"
                android:fontFamily="@font/karla"
                android:textSize="14sp"
                android:textColor="@color/White"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/get_to_know_more"
            android:textColor="@color/Indigo"
            android:fontFamily="@font/rubik_bold"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/button"
            android:layout_width="362sp"
            android:layout_height="90sp"
            android:background="@drawable/rounded_button"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LinearLayout4"
            app:layout_constraintVertical_bias="0.358"
            android:paddingStart="20sp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:layout_width="81sp"
                android:layout_height="match_parent"
                android:src="@drawable/globe"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="200sp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/look_up"
                    android:fontFamily="@font/rubik_bold"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/Indigo"/>

                <TextView
                    android:layout_width="175sp"
                    android:layout_height="wrap_content"
                    android:text="@string/see_details_by_province_all_over_indonesia"
                    android:fontFamily="@font/karla"
                    android:textSize="12sp"/>

            </LinearLayout>

            <ImageView
                android:layout_width="35sp"
                android:layout_height="match_parent"
                android:src="@drawable/next"
                android:contentDescription="@string/todo" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button2"
            android:layout_width="362sp"
            android:layout_height="90sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            android:paddingStart="20sp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:layout_width="81sp"
                android:layout_height="match_parent"
                android:src="@drawable/sirene"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="200sp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotline"
                    android:fontFamily="@font/rubik_bold"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/Indigo"/>

                <TextView
                    android:layout_width="175sp"
                    android:layout_height="wrap_content"
                    android:text="@string/check_emergency_number_to_contact"
                    android:fontFamily="@font/karla"
                    android:textSize="12sp"/>

            </LinearLayout>

            <ImageView
                android:layout_width="35sp"
                android:layout_height="match_parent"
                android:src="@drawable/next"
                android:contentDescription="@string/todo" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>