<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16sp"
    app:cardElevation="12sp"
    android:layout_marginTop="15sp"
    android:layout_marginBottom="15sp"
    android:layout_marginLeft="15sp"
    android:layout_marginRight="15sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/activity2_city_background"
        android:padding="15sp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tvHotlineName"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/rubik_bold"
            android:paddingStart="20sp"
            android:text="@string/app_name"
            android:textColor="@color/Indigo"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvHotLineNumber"
            android:paddingStart="20sp"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/_86521"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHotlineName"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/phone_call"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/telephone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>