<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/whitemenu">

        <ImageView
            android:id="@+id/search_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.055" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/hotline"
            android:textColor="@color/Indigo"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_delete_btn" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:layout_marginTop="5dp"
            android:text="@string/Hotline_description"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHotline"
            android:layout_marginTop="10dp"
            android:layout_width="350dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:itemCount="5"
            tools:listitem="@layout/item_hotline" />

        <ProgressBar
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:progressDrawable="@drawable/circular_progress_bar_indigo"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>